--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cartoon University</title>
+    <title>Finals E Commerce</title>
     <link rel="stylesheet" type="text/css"  href="vendor/css/bootstrap.min.css">
     <link href="vendor/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css"  href="resource/css/styles.css">
@@ -28,7 +28,7 @@
               <a href="#home"class="nav-item nav-link active navitem">Home</a>
               <a href="#gallery" class="nav-item nav-link navitem">Galleries</a>
               <a href="#aboutus"class="nav-item nav-link navitem">About Us</a>
-              <a href="https://docs.google.com/document/d/1aTSuOmcxRdQjxo93XoRIBDP3UeLZnknB3kDFDzgZCvI/edit?usp=sharing" class="nav-item nav-link navitem">Contact Form</a>
+              <a href="http://127.0.0.1/todolist/"class="nav-item nav-link navitem">Cart</a>
             </div>
           </div>
         </nav>
@@ -39,9 +39,9 @@
     <div class="container">
     <div class="jumbotron jumbotron-fluid header-text">
       <div class="container">
-        <h1 class="headermain">Cartoon University <br /><h6 class="headermain1">Where everything starts from scratch...</h6></h1>
-        <a href="#gallery" class="btn btn-full"> Program Offered</a>
-        <a href="https://docs.google.com/document/d/1zTK22SQtOynt6oAxAF4CrVqii-7qqB_NGxAdfal0NmQ/edit?usp=sharing" class="btn btn-ghost"> Scholarship Program</a>
+        <h1 class="headermain">Ralph's E commerce <br /><h6 class="headermain1">We got all the things for you. </h6></h1>
+        <a href="#gallery" class="btn btn-full">Product Catalog</a>
+        <a href="#" class="btn btn-ghost"> Reviews</a>
       </div>
     </div>
     </div>
@@ -51,54 +51,51 @@
         <div class="row">
           <div class="col-md-5">
             <div class="card cardcon">
-              <h3>3D Animation Program</h3>
-              <img src="resource/img/program1.jpg" class="card-img-top" alt="3d animation">
-              <h4>3D Animation</h4>
+              <img src="resource/img/shirt1.jpeg" class="card-img-top" alt="Taro Milk Tea">
+              <h4>Ralph's Black and White Long Sleeves Shirt</h4>
               <div class="card-body">
               <p class="card-text text-justify">
-                3D animation is the art of using motion to bring characters, vehicles, props, and more to life within TV shows, films, and games. 3D Artists are often involved in several early steps of the VFX pipeline in order to ensure they deliver an animation-ready model.
+                Colours are wavelengths reflected by objects to the human eye. White is pure light and black is the absence of light. In many cultures, these two non-colours are associated with life and death rituals. For essential questions about identity, the opposites black and white are often chosen.
               </p>
-              <a href="https://docs.google.com/document/d/1aTSuOmcxRdQjxo93XoRIBDP3UeLZnknB3kDFDzgZCvI/edit?usp=sharing" class="btn1 btn-card">Enroll Now</a>
+              <a href="http://127.0.0.1/todolist/" class="btn1 btn-card">Buy Now</a>
               </div>
             </div>
           </div>
           <div class="col-md-5">
             <div class="card cardcon">
-              <h3>2D Animation Program</h3>
-              <img src="resource/img/program2.jpg" class="card-img-top" alt="2d animation">
-              <h4>2D Animation</h4>
+              <img src="resource/img/shirt1.jpeg" class="card-img-top" alt="wintermelon milk tea">
+              <h4>Ralph's Black and White Long Sleeves Shirt</h4>
               <div class="card-body">
               <p class="card-text text-justify">
-              2D animation is the art of creating movement in a two-dimensional space. This includes characters, creatures, FX and backgrounds. The illusion of movement is created when individual drawings are together.
+               Colours are wavelengths reflected by objects to the human eye. White is pure light and black is the absence of light. In many cultures, these two non-colours are associated with life and death rituals. For essential questions about identity, the opposites black and white are often chosen.
               </p>
-              <a href="https://docs.google.com/document/d/1aTSuOmcxRdQjxo93XoRIBDP3UeLZnknB3kDFDzgZCvI/edit?usp=sharing" class="btn1 btn-card">Enroll Now</a>
+              <a href="http://127.0.0.1/todolist/" class="btn1 btn-card">Buy Now</a>
               </div>
             </div>
           </div>
 
           <div class="col-md-5">
             <div class="card cardcon">
-              <h3>Animation Program</h3>
-              <img src="resource/img/program3.jpg" class="card-img-top" alt="animation">
-              <h4>Animation</h4>
+              <img src="resource/img/shirt1.jpeg" class="card-img-top" alt="animation">
+              <h4>Ralph's Black and White Long Sleeves Shirt</h4>
               <div class="card-body">
               <p class="card-text text-justify">
-                Animation is a method in which figures are manipulated to appear as moving images. In traditional animation, images are drawn or painted by hand on transparent celluloid sheets to be photographed and exhibited on film. Today, most animations are made with computer-generated imagery
+                Colours are wavelengths reflected by objects to the human eye. White is pure light and black is the absence of light. In many cultures, these two non-colours are associated with life and death rituals. For essential questions about identity, the opposites black and white are often chosen.
               </p>
-              <a href="https://docs.google.com/document/d/1aTSuOmcxRdQjxo93XoRIBDP3UeLZnknB3kDFDzgZCvI/edit?usp=sharing" class="btn1 btn-card">Enroll Now</a>
+              <a href="http://127.0.0.1/todolist/" class="btn1 btn-card">Buy Now</a>
             </div>
           </div>
         </div>
 
         <div class="col-md-5">
           <div class="card cardcon">
-            <h3>Comming Soon</h3>
-            <img src="resource/img/teacher.png" class="card-img-top" alt="New Animation Program">
-            <h4>New Animation Program</h4>
+            <img src="resource/img/shirt1.jpeg" class="card-img-top" alt="New Animation Program">
+            <h4>Ralph's Black and White Long Sleeves Shirt</h4>
             <div class="card-body">
             <p class="card-text text-justify">
-
+              Colours are wavelengths reflected by objects to the human eye. White is pure light and black is the absence of light. In many cultures, these two non-colours are associated with life and death rituals. For essential questions about identity, the opposites black and white are often chosen.
             </p>
+              <a href="http://127.0.0.1/todolist/" class="btn1 btn-card">Buy Now</a>
             </div>
           </div>
         </div>
@@ -109,9 +106,11 @@
 
     <section class="section2" id="aboutus">
       <div class="container">
-        <h1 class="quality">Quality of our Faculty</h1>
+        <h1 class="quality">Quality of our staff</h1>
         <br/>
-        <h5 class="qualityy">We are proud to say that our faculty members is absolute the best of the best internationally..</h5>
+        <h5 class="qualityy">RALPH KHRISTOPHER DAVE CO</h5>
+        <h5 class="qualityy">CENTRO ESCOLAR UNIVERSITY</h5>
+        <h5 class="qualityy">TROUBLESHOOTING AND FIXING LAPTOP/COMPUTERS</h5>
       </br/>
         <hr/>
 
@@ -122,56 +121,6 @@
         </div>
       </div>
     </section>
-
-    <section class="section3">
-      <div class="container">
-        <h1 class="Uni1">Quality of our University</h1>
-        <br/>
-          <h3 class="Uni">Old School University</h3>
-          <br/>
-        <h5 class="Uni2">Founded in late year 1998 by a great programmer and a web developer. His name was Ralph Co</h5>
-      </br/>
-        <hr/>
-
-        <div class="row OTCard text-center text-md-left">
-          <div class="col-md">
-              <img src="resource/img/school3.png" class="img-fluid" alt="Teachers">
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section4">
-      <div class="container">
-        <h3 class="Uni3">New School University</h3>
-        <br/>
-        <h5 class="Uni4">Founded in late year 2015 by a great programmer and a web developer. His name was Ralph Co</h5>
-      </br/>
-        <hr/>
-        <div class="row OTCard text-center text-md-left">
-          <div class="col-md">
-              <img src="resource/img/school2.png" class="img-fluid" alt="Teachers">
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section5">
-      <div class="container">
-        <h3 class="Uni5">Mid School University</h3>
-        <br/>
-        <h5 class="Uni6">Founded in late year 2021 by a great programmer and a web developer. His name was Ralph Co</h5>
-      </br/>
-        <hr/>
-
-        <div class="row OTCard text-center text-md-left">
-          <div class="col-md">
-              <img src="resource/img/school1.png" class="img-fluid" alt="Teachers">
-          </div>
-        </div>
-      </div>
-    </section>
-
     <footer>
       <div class="container">
         <div class="row">
